--- a/css/app.css
+++ b/css/app.css
@@ -26,7 +26,7 @@ button{
     align-content: center;
     display:flex;
     position: fixed;
-    left: 10px;
+    right: 10px;
     top: 5px;
     z-index: 5;
     box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.575);
@@ -124,4 +124,9 @@ button{
 }
 .true{
     background-color:rgb(211, 210, 143) !important; 
+}
+#submitWrapper{
+    display: flex;
+    justify-content: space-between;
+    padding: 5px;
 }
