--- a/css/app.css
+++ b/css/app.css
@@ -151,14 +151,14 @@ background-color: rgb(215, 237, 255);
     font-size: 16px;
     display: absolute;
     right: 5px;
-    height: 40px;
+    height: 30px;
     margin-left: 1vw;
     margin-right:1vw;
     margin-top: 2px;
     margin-bottom:2px;
 }
 
-.upButton:hover {
+.upButton:active {
     color: white;
     background-color: rgb(0, 140, 255);
     box-shadow: none;
@@ -182,6 +182,12 @@ background-color: rgb(215, 237, 255);
     height: 45px;
     margin-left: 15px;
 }
+.itemCardTitle{
+    background-color:rgb(166, 233, 255);
+    padding: 10px;
+    border-radius: 45px;
+    text-align: center;
+}
 .del{
     background-color: rgb(14, 26, 202) !important;
 }
@@ -189,7 +195,7 @@ background-color: rgb(215, 237, 255);
     box-shadow: 0px -2px 8px 2px rgb(251, 255, 0)!important;
 }
 .true1{
-    box-shadow: 0px -2px 8px 2px rgb(251, 255, 0)!important;
-    border: 2px solid rgb(0, 0, 0);
+    box-shadow: 0px -2px 8px 10px rgb(110, 162, 223)!important;
+
     border-radius: 5px;
 }
