--- a/css/app.css
+++ b/css/app.css
@@ -169,12 +169,6 @@ background-color: rgb(215, 237, 255);
     background-color: rgb(0, 140, 255);
     box-shadow: none;
 }
-.menu-item-dropdown{
-    display: fixed;
-    background-color:transparent;
-    position:absolute;
-    left: 5px;
-}
 .menu-dropdown-content{
     z-index: 10;
 }
@@ -187,6 +181,12 @@ background-color: rgb(215, 237, 255);
     padding: 10px;
     border-radius: 45px;
     text-align: center;
+}
+.cardBody{
+    background-color: rgb(224, 224, 224);
+    margin: 10px;
+    border-radius: 5px;
+    padding:10px;
 }
 .del{
     background-color: rgb(14, 26, 202) !important;
