--- a/css/app.css
+++ b/css/app.css
@@ -113,15 +113,13 @@ background-color: rgb(215, 237, 255);
 .secondRow{
     display:flex;
     flex-direction:column;
-    justify-content: space-between;
-
+    justify-content: start;
     margin:2px;
 }
 .thirdRow{
     display:flex;
     flex-direction:column;
     justify-content: space-between;
-    width:120px;
     margin:2px;
 }
 
@@ -183,9 +181,22 @@ background-color: rgb(215, 237, 255);
 }
 .itemCardTitle{
     background-color:rgb(166, 233, 255);
+     margin-left: 20px;
+    margin-right: 70px;
     padding: 10px;
     border-radius: 45px;
     text-align: center;
+    margin-top: 0px;
+}
+.cardBody{
+    background-color: rgb(247, 247, 247);
+    margin-left: 20px;
+    margin-right: 70px;
+    border-radius: 5px;
+    padding:10px;
+    box-shadow: 0px 2px 1px rgb(172, 172, 172)!important;
+    margin-bottom: 50px;
+    margin-top: -10px;
 }
 .costItem{
     text-align:center;
@@ -209,18 +220,30 @@ background-color: rgb(215, 237, 255);
 .deleteButton{
     position:absolute;
     right: 10px;
-    width: 70px;
+    width: 80px;
     bottom: 10px;
 }
-
-.cardBody{
-    background-color: rgb(247, 247, 247);
-    margin: 10px;
-    border-radius: 5px;
-    padding:10px;
-    box-shadow: 0px 2px 1px rgb(172, 172, 172)!important;
+.up{
+    position:absolute;
+    bottom: 60px;
+    left: 10px;
+    width: 50px;
 
 }
+.down{
+    position:absolute;
+    bottom: 10px;
+    left: 10px;
+    width: 70px;
+
+}
+.purchased{
+    position:absolute;
+    bottom:10px;
+    width: 100px;
+    right: 120px;
+}
+
 .del{
     background-color: rgb(14, 26, 202) !important;
 }
