--- a/css/app.css
+++ b/css/app.css
@@ -187,16 +187,29 @@ background-color: rgb(215, 237, 255);
     border-radius: 45px;
     text-align: center;
     margin-top: 0px;
+    box-shadow: 0px 0.5px 1px rgb(172, 172, 172);
 }
 .cardBody{
-    background-color: rgb(247, 247, 247);
+    background-color: rgb(248, 248, 248);
     margin-left: 20px;
     margin-right: 70px;
     border-radius: 5px;
     padding:10px;
-    box-shadow: 0px 2px 1px rgb(172, 172, 172)!important;
+    box-shadow: 0px 0.5px 1px rgb(172, 172, 172);
     margin-bottom: 50px;
     margin-top: -10px;
+    min-height: 30px;
+}
+.empty{
+    background-color: rgb(255, 255, 255);
+    margin-left: 20px;
+    margin-right: 70px;
+    border-radius: 5px;
+    padding:10px;
+    box-shadow: 0px 0px 0px rgb(172, 172, 172);
+    margin-bottom: 50px;
+    margin-top: -10px;
+    min-height: 30px;
 }
 .costItem{
     text-align:center;
@@ -206,6 +219,8 @@ background-color: rgb(215, 237, 255);
     border: 2px solid rgb(0, 140, 255);
     border-radius: 5px;
     padding: 5px;
+    background-color: rgb(0, 140, 255);
+    color: white;
 }
 .costItem::before{
     content:'$';
