--- a/css/app.css
+++ b/css/app.css
@@ -195,18 +195,18 @@ background-color: rgb(215, 237, 255);
     margin-right: 70px;
     border-radius: 5px;
     padding:10px;
-    box-shadow: 0px 0.5px 1px rgb(172, 172, 172);
+    box-shadow: 0px 0.5px 1px trans;
     margin-bottom: 50px;
     margin-top: -10px;
     min-height: 30px;
 }
 .empty{
-    background-color: rgb(255, 255, 255);
+    background-color: transparent;
     margin-left: 20px;
     margin-right: 70px;
     border-radius: 5px;
     padding:10px;
-    box-shadow: 0px 0px 0px rgb(172, 172, 172);
+    box-shadow: 0px 0px 0px transparent;
     margin-bottom: 50px;
     margin-top: -10px;
     min-height: 30px;
