--- a/css/app.css
+++ b/css/app.css
@@ -60,6 +60,15 @@ background-color: rgb(215, 237, 255);
     display:flex;
     flex-direction: column;
 }
+#addTo{
+    position:absolute;
+    top: 240px;
+    z-index: 100;
+    width: 100vw;
+    color: rgb(0, 119, 255);
+    font-weight: 400;
+    padding-left: 40px;
+}
 .toolbar-inner>button{
     position:fixed;
     top:0;
@@ -159,6 +168,7 @@ background-color: rgb(215, 237, 255);
     margin-right:1vw;
     margin-top: 2px;
     margin-bottom:2px;
+    text-align:center;
 }
 
 .upButton:active {
