--- a/css/app.css
+++ b/css/app.css
@@ -228,9 +228,10 @@ background-color: rgb(215, 237, 255);
     top: 0px;
     border: 2px solid rgb(0, 140, 255);
     border-radius: 5px;
-    padding: 5px;
+    padding: 3px;
     background-color: rgb(0, 140, 255);
     color: white;
+    font-size: 18px;
 }
 .costItem::before{
     content:'$';
