--- a/css/app.css
+++ b/css/app.css
@@ -14,7 +14,7 @@ background-color: rgb(215, 237, 255);
 #spendingContainer{
     background-color:rgb(0, 119, 255);
     height: 20px;
-    width:50px;
+    width:123px;
     border-radius: 50px;
     padding: 15px;
     font-size: 18px;
@@ -23,10 +23,11 @@ background-color: rgb(215, 237, 255);
     align-content: center;
     display:flex;
     position: fixed;
-    right: 10px;
+    right: 80px;
     top: 5px;
     z-index: 5;
     box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.199);
+    color:white;
 }
 #dollar{
     color:white;
@@ -197,7 +198,6 @@ margin-right: auto;
     z-index: 10;
 }
 
-}
 .itemCardTitle{
     background-color:rgb(166, 233, 255);
      margin-left: 40px;
@@ -247,6 +247,11 @@ margin-right: auto;
 .costItem::before{
     content:'$';
 
+}
+#totalCost{
+    position:absolute;
+    right: 15px;
+    display: block;
 }
 .editButton{
     position:absolute;
