--- a/css/app.css
+++ b/css/app.css
@@ -79,6 +79,12 @@ background-color: rgb(215, 237, 255);
     top:50px;
     width: 95vw;
 }
+
+#inputEdit{
+    width: 80em;
+    margin-top: 10px;
+
+}
 #buttonWrapper{
     width:95vw;
     display:flex;
@@ -122,6 +128,7 @@ margin-right: auto;
     background-color: white;
     box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.575);
     z-index: 2;
+    min-height: 250px;
 }
 .firstRow{
     display:flex;
@@ -252,6 +259,7 @@ margin-right: auto;
     position:absolute;
     right: 15px;
     display: block;
+    top: 13px;
 }
 .editButton{
     position:absolute;
@@ -289,7 +297,8 @@ margin-right: auto;
 .purchased{
     position:absolute;
     bottom:10px;
-    width: 100px;
+    min-width: 120px;
+    max-width: 40%;
     right: 120px;
     margin-left: 60px;
 }
