--- a/css/app.css
+++ b/css/app.css
@@ -104,7 +104,7 @@ background-color: rgb(215, 237, 255);
     align-content: center;
     text-align:center;
     position:absolute;
-    top: 100px;
+    top: 70px;
     left: 10%;
     padding: 5vw;
     color:white;
@@ -210,7 +210,7 @@ margin-right: auto;
      margin-left: 40px;
     margin-right: 70px;
     padding: 10px;
-    border-radius: 45px;
+    border-radius: 5px;
     text-align: center;
     margin-top: 0px;
     box-shadow: 0px 0.5px 1px rgb(172, 172, 172);
@@ -246,7 +246,7 @@ margin-right: auto;
     top: 0px;
     border: 2px solid rgb(0, 140, 255);
     border-radius: 5px;
-    padding: px;
+    padding: 3px;
     background-color: rgb(0, 140, 255);
     color: white;
     font-size: 18px;
@@ -316,10 +316,11 @@ margin-right: auto;
     flex-direction: row;
 }
 p{
-    margin-top: 10px;
+    margin-top: 5px;
 }
 h3{
     margin-top: 0px;
+    margin-bottom: 5px;
 }
 
 .del{
@@ -329,7 +330,10 @@ h3{
     box-shadow: 0px -2px 8px 2px rgb(251, 255, 0)!important;
 }
 .true1{
-    box-shadow: 0px -2px 8px 10px rgb(110, 162, 223)!important;
-
+    box-shadow: 0px -2px 8px 10px rgb(232, 248, 10)!important;
+    background-color: rgb(153, 200, 238);
     border-radius: 5px;
+}
+.true2{
+    background-color: red;
 }
